--- a/index.html
+++ b/index.html
@@ -577,25 +577,17 @@
 
 
             //sets attributes
-            const size=new Float32Array(instance_count);
-            for(let i=0;i<instance_count;i++) size[i]=Math.random()*0.95+0.05;
             gl.bindBuffer(gl.ARRAY_BUFFER,size_buffer);
-            gl.bufferData(gl.ARRAY_BUFFER,size,gl.STATIC_DRAW);
-            
-            const rot=new Float32Array(instance_count*4);
-            for(let i=0;i<rot.length;i++) rot[i]=Math.random();
+            gl.bufferData(gl.ARRAY_BUFFER,new Float32Array(instance_count).map(()=>Math.random()*0.95+0.05),gl.STATIC_DRAW);
+
             gl.bindBuffer(gl.ARRAY_BUFFER,rotation_buffer);
-            gl.bufferData(gl.ARRAY_BUFFER,rot,gl.STATIC_DRAW);
+            gl.bufferData(gl.ARRAY_BUFFER,new Float32Array(instance_count*4).map(Math.random),gl.STATIC_DRAW);
 
-            const inst_pos=new Float32Array(instance_count*2);
-            for(let i=0;i<inst_pos.length;i++) inst_pos[i]=Math.random();
             gl.bindBuffer(gl.ARRAY_BUFFER,instance_position_buffer);
-            gl.bufferData(gl.ARRAY_BUFFER,inst_pos,gl.STATIC_DRAW);
+            gl.bufferData(gl.ARRAY_BUFFER,new Float32Array(instance_count*2).map(Math.random),gl.STATIC_DRAW);
 
-            const speed=new Float32Array(instance_count);
-            for(let i=0;i<speed.length;i++) speed[i]=Math.random()*0.75+0.25;
             gl.bindBuffer(gl.ARRAY_BUFFER,speed_buffer);
-            gl.bufferData(gl.ARRAY_BUFFER,speed,gl.STATIC_DRAW);
+            gl.bufferData(gl.ARRAY_BUFFER,new Float32Array(instance_count).map(()=>Math.random()*0.75+0.25),gl.STATIC_DRAW);
 
 
             e.target.previousElementSibling.textContent="Cubes: "+instance_count;
