--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 float max_x=aspect+0.2;
                 float max_x_2=max_x*2.;
                 gl_Position.x+=mod((mouse_position.x-time*speed)*size+instance_position.x*max_x_2,max_x_2)-max_x;
-                gl_Position.y+=mod(instance_position.y*2.4-mouse_position.y*size,2.4)-1.2;
+                gl_Position.y+=mod(instance_position.y-mouse_position.y*size,2.4)-1.2;
                 gl_Position.z=(gl_Position.z-size*30.)/60.;
 
                 //adjust to aspect ratio
@@ -482,23 +482,23 @@
         },{passive:true});
 
         const last_touch=[0,0];
-        function touchmove(e){
-            if(e.type==="touchmove"){
-                mouse.movement[0]+=e.touches[0].clientX-last_touch[0];
-                mouse.movement[1]+=e.touches[0].clientY-last_touch[1];
-            }
+        addEventListener("touchstart",(e)=>{
             last_touch[0]=e.touches[0].clientX;
             last_touch[1]=e.touches[0].clientY;
-        }
-
-        addEventListener("touchstart",touchmove,{passive:true});
-        addEventListener("touchmove",touchmove,{passive:true});
+        },{passive:true});
+        addEventListener("touchmove",(e)=>{
+            mouse.movement[0]+=e.touches[0].clientX-last_touch[0];
+            mouse.movement[1]+=e.touches[0].clientY-last_touch[1];
+            last_touch[0]=e.touches[0].clientX;
+            last_touch[1]=e.touches[0].clientY;
+        },{passive:true});
 
         let then=0;
         function process(now){
             requestAnimationFrame(process);
+            now/=1000;
             if(then===now) return;
-            const delta=(now-then)/1000;
+            const delta=now-then;
             then=now;
 
 
@@ -516,7 +516,7 @@
             gl.bindBuffer(gl.ARRAY_BUFFER,points.data_buffer);
             gl.vertexAttribPointer(points.data,4,gl.FLOAT,false,0,0);
 
-            gl.uniform1f(points.time,now/1000);
+            gl.uniform1f(points.time,now);
             gl.uniform2fv(points.mouse_position,mouse.position);
 
             gl.drawArrays(gl.POINTS,0,points.count);
@@ -526,7 +526,7 @@
             gl.bindBuffer(gl.ARRAY_BUFFER,geometry_buffer);
             gl.vertexAttribPointer(position_attribute,3,gl.FLOAT,false,0,0);
 
-            gl.uniform1f(uniforms.time,now/1000);
+            gl.uniform1f(uniforms.time,now);
             gl.uniform2fv(uniforms.mouse_position,mouse.position);
 
             gl.drawArraysInstanced(gl.TRIANGLES,0,geometry.length/3,instance_count);
@@ -588,8 +588,13 @@
             gl.bindBuffer(gl.ARRAY_BUFFER,rotation_buffer);
             gl.bufferData(gl.ARRAY_BUFFER,new Float32Array(instance_count*4).map(Math.random),gl.STATIC_DRAW);
 
+            const pos=new Float32Array(instance_count*2);
+            for(let i=0;i<pos.length;){
+                pos[i++]=Math.random();
+                pos[i++]=Math.random()*2.4;
+            }
             gl.bindBuffer(gl.ARRAY_BUFFER,instance_position_buffer);
-            gl.bufferData(gl.ARRAY_BUFFER,new Float32Array(instance_count*2).map(Math.random),gl.STATIC_DRAW);
+            gl.bufferData(gl.ARRAY_BUFFER,pos,gl.STATIC_DRAW);
 
             gl.bindBuffer(gl.ARRAY_BUFFER,speed_buffer);
             gl.bufferData(gl.ARRAY_BUFFER,new Float32Array(instance_count).map(()=>Math.random()*0.75+0.25),gl.STATIC_DRAW);
