--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <body>
         <canvas></canvas>
 
-        <div id="settings" style="display: none;">
+        <div id="settings" hidden>
             <div style="padding: 50px;overflow: auto;">
                 <p>Cubes</p>
                 <input type="range" id="count" min="0" max="1000" step="1">
@@ -110,10 +110,7 @@
 
             <div style="position: fixed;bottom: 20px;right: 20px;display: flex;gap: 8px;">
                 <button onclick="document.fullscreenElement ? document.exitFullscreen() : document.body.requestFullscreen()">Toggle fullscreen</button>
-                <button onclick="
-                    localStorage.clear();
-                    location.reload();
-                ">Reset</button>
+                <button id="reset">Reset</button>
             </div>
         </div>
 
@@ -139,12 +136,12 @@
         gl.enableVertexAttribArray(4);
 
 
-        let instance_count=75;
+        let instance_count=0;
 
 
         //points
         const points={
-            count:500,
+            count:0,
 
             data_buffer:gl.createBuffer(),
             vshader:gl.createShader(gl.VERTEX_SHADER),
@@ -314,7 +311,7 @@
 
         //post pass one | original framebuffer at full resolution
         const post={
-            enabled:true,
+            enabled:null,
 
             framebuffer:gl.createFramebuffer(),
             texture:gl.createTexture(),
@@ -473,20 +470,20 @@
             position:[0,0],
             movement:[0,0],
 
-            sensitivity:5,
+            sensitivity:0,
         }
 
-        addEventListener("mousemove",(e)=>{
+        addEventListener("mousemove",e=>{
             mouse.movement[0]+=e.movementX;
             mouse.movement[1]+=e.movementY;
         },{passive:true});
 
         const last_touch=[0,0];
-        addEventListener("touchstart",(e)=>{
+        addEventListener("touchstart",e=>{
             last_touch[0]=e.touches[0].clientX;
             last_touch[1]=e.touches[0].clientY;
         },{passive:true});
-        addEventListener("touchmove",(e)=>{
+        addEventListener("touchmove",e=>{
             mouse.movement[0]+=e.touches[0].clientX-last_touch[0];
             mouse.movement[1]+=e.touches[0].clientY-last_touch[1];
             last_touch[0]=e.touches[0].clientX;
@@ -562,22 +559,17 @@
             open_settings:document.getElementById("open_settings"),
             settings:document.getElementById("settings"),
 
-            bloom:document.getElementById("bloom"),
             count:document.getElementById("count"),
-            sensitivity:document.getElementById("sensitivity"),
             points_count:document.getElementById("points_count"),
+            sensitivity:document.getElementById("sensitivity"),
+            bloom:document.getElementById("bloom"),
+            reset:document.getElementById("reset"),
         }
 
-        ui.open_settings.addEventListener("click",()=>{
-            ui.settings.style.display=ui.settings.style.display ? "" : "none";
-        });
+        ui.open_settings.addEventListener("click",()=>ui.settings.hidden=!ui.settings.hidden);
 
-        ui.bloom.addEventListener("change",(e)=>{
-            post.enabled=Number(e.target.checked);
-            localStorage.bloom=post.enabled;
-        });
 
-        ui.count.addEventListener("input",(e)=>{
+        ui.count.addEventListener("input",e=>{
             instance_count=e.target.value;
 
 
@@ -601,16 +593,10 @@
 
 
             e.target.previousElementSibling.textContent="Cubes: "+instance_count;
-            localStorage.count=instance_count;
         });
-        
-        ui.sensitivity.addEventListener("input",(e)=>{
-            mouse.sensitivity=e.target.value;
-            e.target.previousElementSibling.textContent="Sensitivity: "+mouse.sensitivity;
-            localStorage.sens=mouse.sensitivity;
-        });
+        ui.count.addEventListener("change",e=>localStorage.count=e.target.value);
 
-        ui.points_count.addEventListener("input",(e)=>{
+        ui.points_count.addEventListener("input",e=>{
             points.count=e.target.value;
 
             const data=new Float32Array(points.count*4);
@@ -623,17 +609,37 @@
             gl.bindBuffer(gl.ARRAY_BUFFER,points.data_buffer);
             gl.bufferData(gl.ARRAY_BUFFER,data,gl.STATIC_DRAW);
 
-            e.target.previousElementSibling.textContent="Points: "+e.target.value;
-            localStorage.points_count=e.target.value;
+            e.target.previousElementSibling.textContent="Points: "+points.count;
+        });
+        ui.points_count.addEventListener("change",e=>localStorage.points_count=e.target.value);
+
+        ui.sensitivity.addEventListener("input",e=>{
+            mouse.sensitivity=e.target.value;
+            e.target.previousElementSibling.textContent="Sensitivity: "+mouse.sensitivity;
+        });
+        ui.sensitivity.addEventListener("change",e=>localStorage.sens=e.target.value);
+
+        ui.bloom.addEventListener("change",e=>{
+            post.enabled=e.target.checked;
+            localStorage.bloom=Number(post.enabled);
         });
 
-        ui.bloom.checked=Number(localStorage.bloom??post.enabled);
-        ui.bloom.dispatchEvent(new Event("change"));
-        ui.count.value=localStorage.count??instance_count;
-        ui.count.dispatchEvent(new Event("input"));
-        ui.sensitivity.value=localStorage.sens??mouse.sensitivity;
-        ui.sensitivity.dispatchEvent(new Event("input"));
-        ui.points_count.value=localStorage.points_count??points.count;
-        ui.points_count.dispatchEvent(new Event("input"));
+
+        function load_settings(){
+            ui.count.value=localStorage.count??75;
+            ui.count.dispatchEvent(new Event("input"));
+            ui.points_count.value=localStorage.points_count??500;
+            ui.points_count.dispatchEvent(new Event("input"));
+            ui.sensitivity.value=localStorage.sens??5;
+            ui.sensitivity.dispatchEvent(new Event("input"));
+            ui.bloom.checked=Number(localStorage.bloom??true);
+            ui.bloom.dispatchEvent(new Event("change"));
+        }
+        load_settings();
+
+        ui.reset.addEventListener("click",()=>{
+            localStorage.clear();
+            load_settings();
+        });
     </script>
 </html>
