--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
             uniform float time;
 
-            vec3 hsv2rgb(vec3 c) {
+            vec3 hsv2rgb(const vec3 c) {
                 vec4 K = vec4(1.0, 2.0 / 3.0, 1.0 / 3.0, 3.0);
                 vec3 p = abs(fract(c.xxx + K.xyz) * 6.0 - K.www);
                 return c.z * mix(K.xxx, clamp(p - K.xxx, 0.0, 1.0), c.y);
@@ -209,7 +209,7 @@
 
             varying float gradient;
 
-            mat4 rotationMatrix(vec3 axis, float angle)
+            mat4 rotationMatrix(vec3 axis, const float angle)
             {
                 axis = normalize(axis);
                 float s = sin(angle);
@@ -250,7 +250,7 @@
 
             varying float gradient;
 
-            vec3 hsv2rgb(vec3 c) {
+            vec3 hsv2rgb(const vec3 c) {
                 vec4 K = vec4(1.0, 2.0 / 3.0, 1.0 / 3.0, 3.0);
                 vec3 p = abs(fract(c.xxx + K.xyz) * 6.0 - K.www);
                 return c.z * mix(K.xxx, clamp(p - K.xxx, 0.0, 1.0), c.y);
