Unrolled bloom shaders

--- a/index.html
+++ b/index.html
@@ -354,15 +354,19 @@
 
             uniform sampler2D txt;
             uniform vec2 resolution;
-            
-            const float PI=radians(180.);
 
             void main(){
                 vec2 uv=gl_FragCoord.xy/resolution;
                 float px=1./resolution.x;
 
-                for(float x=-3.;x<=3.;++x) gl_FragColor+=texture2D(txt,uv+vec2(x*px,0.))*(cos(x/4.*PI)+1.)/2.;
-                gl_FragColor/=gl_FragColor.w;
+                //for(float x=-3.;x<=3.;++x) gl_FragColor+=texture2D(txt,uv+vec2(x*px,0.))*(cos(x/4.*PI)+1.)/2.;
+                //gl_FragColor/=gl_FragColor.w;
+
+                gl_FragColor=
+                    (texture2D(txt,uv+vec2(-3.*px,0.))+texture2D(txt,uv+vec2(3.*px,0.)))*0.03661165235168157+
+                    (texture2D(txt,uv+vec2(-2.*px,0.))+texture2D(txt,uv+vec2(2.*px,0.)))*0.125+
+                    (texture2D(txt,uv+vec2(-px,0.))+texture2D(txt,uv+vec2(px,0.)))*0.21338834764831843+
+                    texture2D(txt,uv)*0.25;
             }
         `);
         gl.compileShader(post2.fshader);
@@ -410,16 +414,20 @@
             uniform sampler2D original_txt;
             uniform vec2 resolution;
 
-            const float PI=radians(180.);
-
             void main(){
                 vec2 uv=gl_FragCoord.xy/resolution;
                 float px=50./resolution.y;
 
-                for(float y=-3.;y<=3.;++y) gl_FragColor+=texture2D(txt,uv+vec2(0.,y*px))*(cos(y/4.*PI)+1.)/2.;
-                gl_FragColor/=gl_FragColor.w;
+                //for(float y=-3.;y<=3.;++y) gl_FragColor+=texture2D(txt,uv+vec2(0.,y*px))*(cos(y/4.*PI)+1.)/2.;
+                //gl_FragColor/=gl_FragColor.w;
 
-                gl_FragColor+=texture2D(original_txt,uv);
+                gl_FragColor=
+                    (texture2D(txt,uv+vec2(0.,-3.*px))+texture2D(txt,uv+vec2(0.,3.*px)))*0.03661165235168157+
+                    (texture2D(txt,uv+vec2(0.,-2.*px))+texture2D(txt,uv+vec2(0.,2.*px)))*0.125+
+                    (texture2D(txt,uv+vec2(0.,-px))+texture2D(txt,uv+vec2(0.,px)))*0.21338834764831843+
+                    texture2D(txt,uv)*0.25+
+
+                    texture2D(original_txt,uv);
             }
         `);
         gl.compileShader(post3.fshader);
