--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 margin: 0px;
                 overflow: clip;
                 background: black;
+                user-select: none;
 
                 color: white;
                 font-family: Arial, Helvetica, sans-serif;
